correcciones al html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jhailing Ramos">
+    <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking">
+    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +47,7 @@
     <main>
         <!-- section principal -->
         <section class="section_main">
-            <img class="img-main" src="./img/Andrescooking-1.jpg" alt="imagen portada">
+            <img class="img-main" src="./img/Andrescooking-1.jpg" alt="portada Andres Cooking cortando unas naranjas en el aire">
             <div class="container-title">
                 <h1 class="title-portada">Ven y prepara
                 mis <br> #Recetascooking</h1> 
@@ -66,31 +69,31 @@
             <!-- imagen 1 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CoSZoZlPUgh/" target="_blank">
-                    <img class="img_galeria" src="./img/Canele.jpg" alt="Galeria Imagen">
+                    <img class="img_galeria" src="./img/Canele.jpg" alt="Imagen y video de receta de Canele: biscochuelos franceses">
                 </a>
             </div>
             <!-- imagen 2 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CpQFxD6OEI0/" target="_blank">
-                    <img class="img_galeria" src="./img/recipe 1.jpg" alt="Galeria Imagen">
+                    <img class="img_galeria" src="./img/recipe 1.jpg" alt="Imagen y video de receta de pasta, espinaca y queso">
                 </a>
             </div>
             <!-- imagen 3 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CoKmHsAtL9d/" target="_blank">
-                    <img class="img_galeria" src="./img/Garlic Naan.jpg" alt="Galeria Imagen">
+                    <img class="img_galeria" src="./img/Garlic Naan.jpg" alt="Imagen y video de receta de garlic naan">
                     </a>
             </div>
             <!-- imagen 4 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/Cp7jqdkPD17/" target="_blank">
-                    <img class="img_galeria" src="./img/arepa-pernil2.jpg" alt="Galeria Imagen">
+                    <img class="img_galeria" src="./img/arepa-pernil2.jpg" alt="Imagen y video de receta de arepa con pernil, queso y tomate">
                     </a>
             </div>
             <!-- imagen 5 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CqvFaSWJwv1/" target="_blank">
-                    <img class="img_galeria" src="./img/waffles.jpg" alt="Galeria Imagen">
+                    <img class="img_galeria" src="./img/waffles.jpg" alt="Imagen y video de receta de waffles con crema batida, fresas y arándanos">
                     </a>
             </div>
         </div>
@@ -147,26 +150,26 @@
                 <div class="social_media">
                 <!-- facebook -->
                     <button type="submit" class="logofa">
-                        <a href="https://www.facebook.com/search/top?q=andrescooking" alt=facebook target="_blank" role="button"  class="iconfa">
+                        <a href="https://www.facebook.com/search/top?q=andrescooking" alt="icono y link de facebook" target="_blank" role="button"  class="iconfa">
                             <i class="fab fa-facebook-f"></i>
                         </a> 
                     </button>
                 <!-- Instagram -->
                     <button type="submit" class="logoIg">
-                        <a  href="https://www.instagram.com/andrescooking/" alt=instagram target="_blank" role="button" class="iconIg">
+                        <a  href="https://www.instagram.com/andrescooking/" alt= "icono y link de instagram" target="_blank" role="button" class="iconIg">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </button>
                 <!-- YouTube -->
                     <button type="submit" class="logoYT">
-                        <a  href="https://www.youtube.com/c/andrescooking" alt=youTube target="_blank" role="button" class="iconYT
+                        <a  href="https://www.youtube.com/c/andrescooking" alt="icono y link de youTube" target="_blank" role="button" class="iconYT
                         ">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </button>
                 <!-- TikTok -->
                     <button type="submit" class="logoTT">
-                        <a  href="https://www.tiktok.com/@andrescooking" alt=tiktok target="_blank" role="button">
+                        <a  href="https://www.tiktok.com/@andrescooking" alt="icono y link de tiktok" target="_blank" role="button">
                             <i class="fa-brands fa-tiktok"></i>
                         </a>
                     </button>
