--- a/pages/glosario.html
+++ b/pages/glosario.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jhailing Ramos">
+    <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking">
+    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,62 +66,62 @@
             <!-- Receta 1 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Celk_l9vmfY/" target="_blank">
-            <img class="img-box" src="../img/glo-1.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-1.jpg" alt="Imagen y video de receta de galletas de chocolate y nueces"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CeJKMNEjeG6/" target="_blank">
-            <img class="img-box" src="../img/glo-2.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-2.jpg" alt="Imagen y video de receta de arroz con chorizo"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Cd0pvmfub6Y/" target="_blank">
-            <img class="img-box" src="../img/glo-3.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-3.jpg" alt="Imagen y video de receta de costillas barbecue"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Cdqab2jMA3S/" target="_blank">
-            <img class="img-box" src="../img/glo-4.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-4.jpg" alt="Imagen y video de receta de jugo potente para reforzar sistema inmunológico"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CdiqK7jvq2H/" target="_blank">
-            <img class="img-box" src="../img/glo-5.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-5.jpg" alt="Imagen y video de receta de pan con chorizo y queso a la parrilla"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CdbLvY2v5zZ/" target="_blank">
-            <img class="img-box" src="../img/glo-6.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-6.jpg" alt="Imagen y video de receta de trufas de chocolate saludables"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CcLC_zTMP0t/" target="_blank">
-            <img class="img-box" src="../img/glo-7.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-7.jpg" alt="Imagen y video de receta de tostadas francesas con crema, frutos rojos y mermelada"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CasI76Tr6xk/" target="_blank">
-            <img class="img-box" src="../img/glo-8.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-8.jpg" alt="Imagen y video de receta de daiquiri de piña"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CdlIGiWpIgk/" target="_blank">
-            <img class="img-box" src="../img/glo-9.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/glo-9.jpg" alt="Imagen y video de receta de pan tumaca: pan con tomate y jamon serrano"></a>
             </div>  
             <!-- Receta 10 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/Ch9_YiuDnC8/" target="_blank">
-                <img class="img-box" src="../img/glo-10.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/glo-10.jpg" alt="Imagen y video de receta de churros"></a>
             </div> 
             <!-- Receta 11 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CklPr9urqdS/" target="_blank">
-                <img class="img-box" src="../img/glo-11.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/glo-11.jpg" alt="Imagen y video de receta de ponche crema"></a>
             </div>
             <!-- Receta 12 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/ClJSvYJphJY/" target="_blank">
-                <img class="img-box" src="../img/glo-12.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/glo-12.jpg" alt="Imagen y video de receta de cachapas"></a>
             </div>
         </div>
     </main>
