--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jhailing Ramos">
+    <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking">
+    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,47 +63,47 @@
             <!-- Receta 1 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/Cnj8-DOKGsn/" target="_blank">
-                <img class="img-box" src="../img/Ensalada.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Ensalada.jpg" alt="Imagen y video de receta de ensalada de maíz y frijoles negros"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
                 <a href="https://www.tiktok.com/@andrescooking/video/7210421862856183082" target="_blank">
-                <img class="img-box" src="../img/PastaAmatriciana.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/PastaAmatriciana.jpg" alt="Imagen y video de receta de pasta amatriciana"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CoawV9qsb7D/" target="_blank">
-                <img class="img-box" src="../img/Milanesa de Carne.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Milanesa de Carne.jpg" alt="Imagen y video de receta de milanesa con jamón y queso"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CmxPLbPojYu/" target="_blank">
-                <img class="img-box" src="../img/Queso-Brie-horno.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Queso-Brie-horno.jpg" alt="Imagen y video de receta de hojaldre relleno con queso brie y mermelada de frutos rojos"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CpDWJr4JFbv/" target="_blank">
-                <img class="img-box" src="../img/Risotto Camarones.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Risotto Camarones.jpg" alt="Imagen y video de receta de risotto de camarones"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CrBcfyfgdAr/" target="_blank">
-                <img class="img-box" src="../img/Tacos-Carne-Asada .jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Tacos-Carne-Asada .jpg" alt="Imagen y video de receta de quesa-tacos con carne asada"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/Com11pHrjs_/" target="_blank">
-                <img class="img-box" src="../img/Torta de Naranja.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Torta de Naranja.jpg" alt="Imagen y video de receta de torta de naranja hecha en licuadora"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CgW3xoDv84x/?hl=es" target="_blank">
-                <img class="img-box" src="../img/Risotto-Funghi.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Risotto-Funghi.jpg" alt="Imagen y video de receta de risotto funghi: risotto de champiñones"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CoSZoZlPUgh/" target="_blank">
-                <img class="img-box" src="../img/Canele.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Canele.jpg" alt="Imagen y video de receta de canele: biscochuelos franceses"></a>
             </div>  
         </div>
     </main>
