--- a/pages/recomienda.html
+++ b/pages/recomienda.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jhailing Ramos">
+    <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking, cooking recomienda">
+    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,47 +56,47 @@
             <!-- Receta 1 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CrGmTd_ueg4/" target="_blank">
-            <img class="img-box" src="../img/productos-recomendados.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/productos-recomendados.jpg" alt="Video e imagen de mis 6 productos favoritos para cocinar"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Cq6WqfzMkR-/" target="_blank">
-            <img class="img-box" src="../img/recomendacion-one.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/recomendacion-one.jpg" alt="Video e imagen de productos con formas de pastas super útiles en la cocina"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CqiOHMnjiHA/" target="_blank">
-            <img class="img-box" src="../img/recomendacion-two.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/recomendacion-two.jpg" alt="Video e imagen de la waflera y panquequera de marca Cuisinart"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Cqah6KVD4_p/" target="_blank">
-            <img class="img-box" src="../img/recomendacion-three.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/recomendacion-three.jpg" alt="Video e imagen de producto que sirve para preparar huevos pochados"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CqREOm1jBLx/" target="_blank">
-            <img class="img-box" src="../img/recomendacion-four.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/recomendacion-four.jpg" alt="Video e imagen de un set de cuchillos profesionales"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Cp-dIz7rR01/" target="_blank">
-            <img class="img-box" src="../img/recomendacion-six.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/recomendacion-six.jpg" alt="Video e imagen del exprimidor de limones de marca KitchenAid"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CqItoIvMQDw/" target="_blank">
-            <img class="img-box" src="../img/recomendacion-five.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/recomendacion-five.jpg" alt="Video e imagen del lavajillas de marca Hamilton Beach"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
             <a href="https://www.instagram.com/p/Cp0mhqjPiRO/" target="_blank">
-            <img class="img-box" src="../img/Moledor.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/Moledor.jpg" alt="Video e imagen del molino de alimentos de marca Oxo"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
             <a href="https://www.instagram.com/p/CpsLhtsOrJQ/" target="_blank">
-            <img class="img-box" src="../img/Destapa-corchos.jpg" alt="Receta Galeria"></a>
+            <img class="img-box" src="../img/Destapa-corchos.jpg" alt="Video e imagen del sacacorchos y destapador con forma de murciélago y guacamaya"></a>
             </div>   
         </div>
         <!-- Boton de ir a la tienda -->
