--- a/pages/tips.html
+++ b/pages/tips.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jhailing Ramos">
+    <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking, tips de cocina">
+    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,47 +56,47 @@
             <!-- Receta 1 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CosqmZaJmVi/" target="_blank">
-                <img class="img-box" src="../img/tips-one.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-one.jpg" alt="Imagen y video de cómo cortar una cebolla como un chef"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CouoOj-pl8Q/" target="_blank">
-                <img class="img-box" src="../img/tips-two.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-two.jpg" alt="Imagen y video de cómo cocer un huevo en sus diferentes puntos de cocción"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CodT5m0JldF/" target="_blank">
-                <img class="img-box" src="../img/tips-three.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-three.jpg" alt="Imagen y video de cómo conservar ajíes dulces"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/Cg4XUK7PPLG/" target="_blank">
-                <img class="img-box" src="../img/tips-four.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-four.jpg" alt="Imagen y video de cómo conservar tus bananas por más tiempo"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CgrknDwt0G2/" target="_blank">
-                <img class="img-box" src="../img/tips-five.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-five.jpg" alt="Imagen y video de sacarle el jugo a un limón sin cortarlo"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CgKIOnEJ0dF/" target="_blank">
-                <img class="img-box" src="../img/tips-six.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-six.jpg" alt="Imagen y video de Tips y diferencias entre hierbas secas y hierbas frescas"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CgHZs6SuAUn/" target="_blank">
-                <img class="img-box" src="../img/tips-seven.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-seven.jpg" alt="Imagen y video de cómo conservar tus hierbas"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CgE6BeCuHe6/" target="_blank">
-                <img class="img-box" src="../img/tips-eight.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-eight.jpg" alt="Imagen y video de una manera fácil de distinguir entre el cilantro y el perejil"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CeoNIVXuz4Z/" target="_blank">
-                <img class="img-box" src="../img/tips-nine.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/tips-nine.jpg" alt="Imagen y video de cómo sazonar un pollo y que quede con mejor sabor"></a>
             </div>  
         </div>
         <!-- Boton de ir a la tienda -->
