--- a/pages/glosario.html
+++ b/pages/glosario.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jhailing Ramos">
     <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking">
-    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
+    <meta name="description" content="Busca rapidamente la #cookingreceta que necesites en nuestro glosario de recetas, útil y sencillo">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
