--- a/pages/recomienda.html
+++ b/pages/recomienda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jhailing Ramos">
     <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking, cooking recomienda">
-    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
+    <meta name="description" content="Súmate a mi #tiendacooking y cocina con los más versátiles accesorios y productos de cocina">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
