--- a/pages/tips.html
+++ b/pages/tips.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jhailing Ramos">
     <meta name="keywords" content="Cocina, pasteleria, recetas, andres cooking, tips de cocina">
-    <meta name="description" content="Aprende conmigo a cocinar rico, variado y sencillo con mis #cookingrecetas">
+    <meta name="description" content="Aprende conmigo fáciles tips, que te harán más ágil a la hora de cocinar #tipscooking">
     <!-- Google-Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
